Some logging changes and reads in the username and doesn't store it.

--- a/springxd-ec2/src/test/resources/xd-ec2.properties
+++ b/springxd-ec2/src/test/resources/xd-ec2.properties
@@ -1,8 +1,8 @@
 #Required Fields for environment setup
 cluster-name=Parcels XD Cluster
 user-name=parcels-user
-aws-access-key=
-aws-secret-key=
+aws-access-key=AKIAJLOPQ2LS23UD2URQ
+aws-secret-key=secretkey
 private-key-file=J:/MyDocuments/development/AWS/AWS-XDNode-Development.pem
 public-key-name=AWS-XDNode-Development
 multi-node=true
