--- a/springxd-ec2/src/test/resources/xd-ec2.properties
+++ b/springxd-ec2/src/test/resources/xd-ec2.properties
@@ -3,14 +3,15 @@ cluster-name=Parcels XD Cluster
 user-name=parcels-user
 aws-access-key=AKIAJLOPQ2LS23UD2URQ
 aws-secret-key=secretkey
-private-key-file=J:/MyDocuments/development/AWS/AWS-XDNode-Development.pem
-public-key-name=AWS-XDNode-Development
+private-key-file=/User/gurmaj/Development/parcels-dev.pem
+public-key-name=parcels-dev
 multi-node=true
 number-nodes=1
 machine-size=small
 region=us-west-2
 zone=us-west-2b
-security-group=CentOS 7 -x86_64- with Updates HVM-7 2014-09-29-AutogenByAWSMP-1
+#security-group=CentOS 7 -x86_64- with Updates HVM-7 2014-09-29-AutogenByAWSMP-1
+security-group=default
 xd-dist-url=https://repo.spring.io/libs-snapshot-local/org/springframework/xd/spring-xd/1.0.2.BUILD-SNAPSHOT/spring-xd-1.0.2.BUILD-SNAPSHOT-dist.zip
 ami=ami-c7d092f7
 description=XD-Parcels-Instance
