--- a/springxd-ec2/pom.xml
+++ b/springxd-ec2/pom.xml
@@ -20,13 +20,18 @@
 		<dependency>
 			<groupId>org.apache.jclouds.driver</groupId>
 			<artifactId>jclouds-sshj</artifactId>
-			<version>1.7.1</version>
+			<version>1.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jclouds</groupId>
 			<artifactId>jclouds-all</artifactId>
-			<version>1.7.1</version>
+			<version>1.9.0</version>
 		</dependency>
+	    <dependency>
+	    	<groupId>org.apache.jclouds</groupId>
+	    	<artifactId>jclouds-allcompute</artifactId>
+	    	<version>1.9.0</version>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -65,7 +70,6 @@
 	      <version>4.11</version>
 	      <scope>test</scope>
 	    </dependency>
-				
 	</dependencies>	  
 
 </project>
