Updated POM added per4j dependency

--- a/springxd-ec2/pom.xml
+++ b/springxd-ec2/pom.xml
@@ -16,6 +16,12 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.perf4j</groupId>
+			<artifactId>perf4j</artifactId>
+			<version>0.9.16</version>
+		</dependency>
+		
 	
 		<dependency>
 			<groupId>org.apache.jclouds.driver</groupId>
